erDiagram

    USER {
        int id PK
        string email
        string username
        datetime created_at
    }

    QUIZ {
        int id PK
        string title
        string description
        int creator_id FK
        string share_code
        datetime created_at
    }

    QUESTION {
        int id PK
        int quiz_id FK
        string text
        string type
        string options
        string correct_answer
        int time_limit
        int points
        int order
    }

    SESSION {
        int id PK
        int quiz_id FK
        string pin
        string status
        int host_id FK
        datetime started_at
    }

    PLAYER_SESSION {
        int id PK
        int session_id FK
        string username
        int score
        int lives
        string status
    }

    GAME_EVENT {
        int id PK
        int session_id FK
        int player_id FK
        string event_type
        json data
        datetime timestamp
    }

    USER ||--o{ QUIZ : creates
    QUIZ ||--o{ QUESTION : contains

    USER ||--o{ SESSION : hosts
    QUIZ ||--o{ SESSION : used_in

    SESSION ||--o{ PLAYER_SESSION : has
    PLAYER_SESSION ||--o{ GAME_EVENT : generates
    SESSION ||--o{ GAME_EVENT : logs
